[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Notably Absent DEMO.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Button21.png" type="Texture" id=2]
[ext_resource path="res://UI/Button24.png" type="Texture" id=3]
[ext_resource path="res://UI/dialog_box.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 43
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 51
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 29
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 29
extra_spacing_top = 2
font_data = ExtResource( 1 )

[node name="dialog_box" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 0.69
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -21.8
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 1248.0
margin_bottom = 229.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 1248.0
margin_bottom = 229.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1232.0
margin_bottom = 213.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1232.0
margin_bottom = 206.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Name" type="Label" parent="TextboxContainer/MarginContainer/VBoxContainer"]
margin_right = 1216.0
margin_bottom = 40.0
rect_min_size = Vector2( 114, 0 )
size_flags_horizontal = 5
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Fire Force :"

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 1216.0
margin_bottom = 190.0

[node name="space" type="Label" parent="TextboxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 110.0
margin_right = 70.0
margin_bottom = 150.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )

[node name="Text" type="Label" parent="TextboxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 1104.0
margin_bottom = 150.0
rect_min_size = Vector2( 1000, 150 )
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "aku adalah dada adadadadad adadadadadadad asasasasasasasasasasasasasasasasas"
valign = 1
autowrap = true
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1108.0
margin_top = 94.0
margin_right = 1216.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_constants/margin_right = 8
custom_constants/margin_bottom = 6

[node name="Next" type="Button" parent="TextboxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 5 )
text = "Next"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1104.94
margin_top = 5.04538
margin_right = 1274.94
margin_bottom = 92.0454
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "SKIP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
